# jsk_uav_forest

./: .gitignore  .travis.sh  .travis.yml  README.md  jsk_uav_forest.rosinstall
jsk_uav_forest/: CMakeLists.txt  package.xml
jsk_uav_forest_common/: CMakeLists.txt  image_throttle_nodelets.xml  package.xml  rqt_gui_plugin.xml
jsk_uav_forest_common/camera_info/: cm3_u3_13y3c_m38b_1000.yaml  usb_cam_elecom.yaml
jsk_uav_forest_common/data/: 2017-05-20-10-11-map.yaml  2017-05-20-10-11-trees.yaml  2017-05-20-10-6-map.yaml  2017-05-20-10-6-trees.yaml  2017-05-20-12-32-map.yaml  2017-05-20-12-32-trees.yaml  2017-05-20-12-38-map.yaml  2017-05-20-12-38-trees.yaml  2017-05-20-13-1-map.yaml  2017-05-20-13-1-trees.yaml  2017-05-20-14-10-map.yaml  2017-05-20-14-10-trees.yaml  2017-05-20-14-17-map.yaml  2017-05-20-14-17-trees.yaml  2017-05-20-14-25-map.yaml  2017-05-20-14-25-trees.yaml  2017-05-20-14-39-map.yaml  2017-05-20-14-39-trees.yaml  2017-05-20-9-10-map.yaml  2017-05-20-9-10-trees.yaml  2017-05-20-9-4-map.yaml  2017-05-20-9-4-trees.yaml  2017-05-20-9-6-map.yaml  2017-05-20-9-6-trees.yaml  2017-05-21-10-51-map.yaml  2017-05-21-10-51-trees.yaml  2017-05-21-14-29-map.yaml  2017-05-21-14-29-trees.yaml  2017-05-21-14-42-map.yaml  2017-05-21-14-42-trees.yaml  2017-05-21-14-48-map.yaml  2017-05-21-14-48-trees.yaml  2017-05-21-14-57-map.yaml  2017-05-21-14-57-trees.yaml  2017-05-21-9-2-map.yaml  2017-05-21-9-2-trees.yaml  2017-05-21-9-30-map.yaml  2017-05-21-9-30-trees.yaml  test-map.yaml  test-trees.yaml
jsk_uav_forest_common/launch/: 2d_mapping.launch  LaserMapping.yaml  challenge.launch  debug.launch  debug_viewer.rviz  jsk_uav_forest.perspective  log_viewer.launch  log_viewer.rviz  m100_bringup.launch  result.launch  result_viewer.rviz
jsk_uav_forest_common/launch/communication/: communication2ground_station.launch  ground_station.launch  groundstation.rviz
jsk_uav_forest_common/launch/sensor/: pointgrey_chameleon3.launch  urg_node.launch  usb_cam.launch
jsk_uav_forest_common/msg/: FC2OCSImage.msg
jsk_uav_forest_common/script/: integration_odom.py  odom_generator.py  tf_broadcaster.py
jsk_uav_forest_common/scripts/: tf_broadcaster.py
jsk_uav_forest_common/scripts/start_button/: start_button.py  start_button.ui
jsk_uav_forest_common/src/: database_server.cpp  image_throttle.cpp
jsk_uav_forest_motion/: CMakeLists.txt  package.xml
jsk_uav_forest_motion/config/circle_motion/: circle_motion.yaml
jsk_uav_forest_motion/config/motion/: motion.yaml
jsk_uav_forest_motion/launch/: jsk_uav_forest.perspective  motion.launch
jsk_uav_forest_motion/script/: circle_motion.py  circle_motion_server.py  circle_motion_sever.py  motion.py  motion_plannar_client.py  motion_plannar_client_origin.py
jsk_uav_forest_perception/: CMakeLists.txt  color_region_detection_nodelets.xml  laser_filters_plugins.xml  package.xml  vision_detection_nodelets.xml  vision_detection_plugins.xml
jsk_uav_forest_perception/cfg/: ColorRegionDetector.cfg  HsvFilter.cfg
jsk_uav_forest_perception/include/jsk_uav_forest_perception/: color_region_detector.h  laser_clustering_filter.h  laser_scan_filters.h  tree_database.h  tree_detector.h  tree_tracking.h  vision_detector.h  vision_detector_base_plugin.h
jsk_uav_forest_perception/include/jsk_uav_forest_perception/util/: circle_detection.h
jsk_uav_forest_perception/include/jsk_uav_forest_perception/vision_detector/: conditional_hsv_filter.h  independent_hsv_filter.h  no_image_filter.h
jsk_uav_forest_perception/launch/: image_process.launch  laser_process.launch  tree_detector.launch
jsk_uav_forest_perception/param/: ColorRegionDetection.yaml  ConditionalHsvFilter.yaml  IndependentHsvFilter.yaml  LaserClustering.yaml  LaserShadowFilter.yaml  NoImageFilter.yaml  TreeFilter.yaml  VisionDetection.yaml
jsk_uav_forest_perception/scripts/: dummy_image_publisher.py  mapping.py
jsk_uav_forest_perception/src/: color_region_detector.cpp  laser_clustering_filter.cpp  laser_scan_filters.cpp  tree_database.cpp  tree_detector.cpp  tree_detector_node.cpp  tree_tracking.cpp  tree_tracking_node.cpp  vision_detection.cpp  vision_detector.cpp
jsk_uav_forest_perception/src/util/: circle_detection.cpp
jsk_uav_forest_perception/src/vision_detector/: conditional_hsv_filter.cpp  independent_hsv_filter.cpp  no_image_filter.cpp
jsk_uav_forest_simulation/: CMakeLists.txt  package.xml
jsk_uav_forest_simulation/gazebo_model/models/: tree.sdf
jsk_uav_forest_simulation/gazebo_model/models/tree/: model.config  model.sdf
jsk_uav_forest_simulation/gazebo_model/world/: forest.world  forest_collision.world
jsk_uav_forest_simulation/launch/: forest_simulation.launch  simulation.rviz
jsk_uav_forest_simulation/src/: uav_teleop_keyboard.cpp
jsk_uav_forest_simulation/urdf/: hokuyo_ust20lx.urdf.xacro  quadrotor_cam_hokuyo.gazebo.xacro
