<?xml version="1.0"?>
<package>
  <name>jsk_uav_forest_common</name>
  <version>0.0.0</version>
  <description>The jsk_uav_forest_common package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="shifan@jsk.imi.i.u-tokyo.ac.jp">Fan Shi</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dji_sdk</run_depend>
  <run_depend>guidance</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>jsk_tools</run_depend>

  <export>
  </export>
</package>
