<?xml version="1.0"?>
<package>
  <name>jsk_uav_forest_common</name>
  <version>0.0.0</version>
  <description>The jsk_uav_forest_common package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="shifan@jsk.imi.i.u-tokyo.ac.jp">Fan Shi</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>jsk_uav_forest_perception</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>jsk_uav_forest_perception</run_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>guidance</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>jsk_tools</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>

  <export>
    <nodelet plugin="${prefix}/image_throttle_nodelets.xml"/>
    <rqt_gui plugin="${prefix}/rqt_gui_plugin.xml"/>
  </export>
</package>
