<?xml version="1.0"?>
<package>
  <name>jsk_uav_forest_perception</name>
  <version>0.0.0</version>
  <description>The jsk_uav_forest_perception package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="shifan@jsk.imi.i.u-tokyo.ac.jp">Fan Shi</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gmapping</run_depend>

  <export>
    <jsk_uav_forest_perception plugin="${prefix}/vision_detection_plugins.xml"/>
    <filters plugin="${prefix}/laser_filters_plugins.xml"/>
  </export>
</package>
