<?xml version="1.0"?>
<package>
  <name>jsk_uav_forest_simulation</name>
  <version>0.0.0</version>
  <description>The jsk_uav_forest_simulation package</description>
  <maintainer email="shifan@jsk.imi.i.u-tokyo.ac.jp">Shi Fan</maintainer>
  <license>LGPLv3</license>
  <author email="shifan@jsk.imi.i.u-tokyo.ac.jp">Shi Fan</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rotors_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_model/models" />
  </export>
</package>
